# python-aspect-rules

./: .bazelrc  .flake8  .gitignore  .pylintrc  .vale.ini  BUILD.bazel  GEMINI.md  LICENSE  MODULE.bazel  README.md  bazel.md  build-architecture.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
blogs/: index.html
src/: lib.py  main.py
tests/: pytest_runner.py  run_pylint.py  test_lib.py
tools/: bazel
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  bandit_runner.py  flake8_runner.py  linters.bzl  pydoclint_runner.py  pylint_runner.py  vale_test_runner.sh
