load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_test")

exports_files([
    "ruff.toml",
    "pyproject.toml",
    "src/__init__.py",
    ".vale.ini",
    ".flake8",
])

filegroup(
    name = "markdown_docs",
    srcs = glob(["**/*.md"]),
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "vale_macos",
    srcs = select({
        "@platforms//cpu:arm64": ["@vale_macOS_arm64//:vale"],
        "//conditions:default": ["@vale_macOS_64-bit//:vale"],
    }),
)

sh_binary(
    name = "vale_linux",
    srcs = select({
        "@platforms//cpu:arm64": ["@vale_Linux_arm64//:vale"],
        "//conditions:default": ["@vale_Linux_64-bit//:vale"],
    }),
)

alias(
    name = "vale",
    actual = select({
        "@platforms//os:macos": ":vale_macos",
        "@platforms//os:linux": ":vale_linux",
        "//conditions:default": ":vale_linux",
    }),
    visibility = ["//visibility:public"],
)

# --- Libraries and Binaries ---

py_library(
    name = "lib",
    srcs = ["src/lib.py"],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = ["@pypi//requests"],
)

py_binary(
    name = "main",
    srcs = ["src/main.py"],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [":lib"],
)

# --- Bandit ---

alias(
    name = "bandit",
    actual = "//tools/lint:bandit",
)

# --- Pytest ---

py_test(
    name = "test_lib",
    srcs = ["tests/test_lib.py"],
    imports = ["."],
    pytest_main = True,
    deps = [
        ":lib",
        "@pypi//pytest",
    ],
)
