load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("//tools/build:build_defs.bzl", "py_library", "py_test")

exports_files([
    "ruff.toml",
    "pyproject.toml",
    "src/__init__.py",
])

# --- Bandit ---

alias(
    name = "bandit",
    actual = "//tools/lint:bandit",
)

# --- Libraries and Binaries ---

py_library(
    name = "lib",
    srcs = ["src/lib.py"],
    visibility = ["//visibility:public"],
    deps = ["@pypi//requests"],
)

py_binary(
    name = "main",
    srcs = ["src/main.py"],
    visibility = ["//visibility:public"],
    deps = [":lib"],
)

# --- Tests ---

py_test(
    name = "test_lib",
    srcs = ["tests/test_lib.py"],
    deps = [":lib"],
)
