[project]
name = "python-aspect-rules"
version = "0.3.0"
description = "A bazel and uv integration project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests",
    "pytest",
    "pylint",
    "ruff",
    "build>=1.5.0",
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
    "bandit>=1.9.4",
    "cython>=3.2.4",
    "flake8",
    "pydoclint",
    "coverage",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pylint.main]
source-roots = ["src"]
init-hook = "import sys; sys.path.append('.')"
ignore-paths = ["venv", ".venv"]

[tool.bandit]
skips = ["B101"]

[tool.ty.rules]
"unresolved-import" = "ignore"
