[project]
name = "python-aspect-rules"
version = "0.4.0"
description = "A bazel and uv integration project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests",
    "pytest",
    "ruff",
    "bandit>=1.9.4",
    "build",
    "cython>=3.2.4",
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.bandit]
skips = ["B101"]

[tool.ty.rules]
