load("@aspect_rules_py//py:defs.bzl", "py_binary")

exports_files(["linters.bzl"])

py_binary(
    name = "pylint",
    srcs = ["pylint_runner.py"],
    main = "pylint_runner.py",
    visibility = ["//visibility:public"],
    deps = [
        "@pypi//pylint",
        "@pypi//requests",
        "@pypi//pytest",
        "@pypi//bandit",
    ],
)

py_binary(
    name = "bandit",
    srcs = ["bandit_runner.py"],
    main = "bandit_runner.py",
    visibility = ["//visibility:public"],
    deps = ["@pypi//bandit"],
)

load("@aspect_rules_py//py:defs.bzl", "py_test")

py_test(
    name = "bandit_test",
    srcs = ["bandit_runner.py"],
    main = "bandit_runner.py",
    args = [
        "-r",
        "src",
    ],
    deps = ["@pypi//bandit"],
)

sh_test(
    name = "markdown_lint_test",
    srcs = ["vale_test_runner.sh"],
    args = [
        "$(rootpath //:vale)",
        "$(locations //:markdown_docs)",
    ],
    data = [
        "//:markdown_docs",
        "//:.vale.ini",
        "//:vale",
    ],
)

