load("@aspect_rules_py//py:defs.bzl", "py_binary")

exports_files(["linters.bzl"])

py_binary(
    name = "pylint",
    srcs = ["pylint_runner.py"],
    main = "pylint_runner.py",
    visibility = ["//visibility:public"],
    deps = [
        "@pypi//pylint",
        "@pypi//requests",
        "@pypi//pytest",
        "@pypi//bandit",
        "@pypi//flake8",
        "@pypi//pydoclint",
    ],
)

py_binary(
    name = "bandit",
    srcs = ["bandit_runner.py"],
    main = "bandit_runner.py",
    visibility = ["//visibility:public"],
    deps = ["@pypi//bandit"],
)

py_binary(
    name = "flake8",
    srcs = ["flake8_runner.py"],
    main = "flake8_runner.py",
    visibility = ["//visibility:public"],
    deps = ["@pypi//flake8"],
)

py_binary(
    name = "pydoclint",
    srcs = ["pydoclint_runner.py"],
    main = "pydoclint_runner.py",
    visibility = ["//visibility:public"],
    deps = ["@pypi//pydoclint"],
)


